<resources>
    <string name="app_name">EnjoyFood</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="welcome">Welcome</string>
    <string name="signIn">sign In</string>
    <string name="full_name">Nom Complet: </string>
    <string name="email">Email: </string>
    <string name="Password">Mot De Passe: </string>
    <string name="already_register">Already Register ?</string>
    <string name="don_t_have_an_account">Pas de Compte?</string>
    <string name="welcome_on_our_app">Welcome on Our App</string>
    <string name="enjoyfood">EnjoyFood</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="todo">TODO</string>
    <string name="sign__in">Sign In</string>
    <string name="favourite">Favourite</string>
    <string name="daily_mealy">daily_mealy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="MyCart">My Cart</string>
    <string name="s_t_c">S T C</string>
    <string name="enjoyfood_gmail_com">EnjoyFood@gmail.com</string>
    <string name="log_out">Log Out</string>
    <string name="home">Home</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="pizza">Pizza</string>
    <string name="hello">Hello</string>
    <string name="what_do_you_want">What do you want?</string>
    <string name="product_name">Pizza</string>
    <string name="_5.0">5.0</string>
    <string name="_08_00_17_30">08:00 - 17:30</string>
    <string name="min_20">Min - $20</string>
    <string name="search_your_food">Search Your Food!</string>
    <string name="dinner">Dinner</string>
    <string name="descriptiom">Descriptiom</string>
    <string name="discount">Discount</string>

    <string name="_10_weekend_delicious_ndinner_recipes">10 weekend delicious \nDinner Recipes</string>
    <string name="view_more">View More</string>
    <string name="your_favourite_food_and_testy_food_is_here">Your favourite Food and Testy Food is here!</string>
    <string name="name">Coffee</string>
    <string name="description">Description</string>
    <string name="_120_00">120.00</string>
    <string name="add_to_cart">Add To Cart</string>
</resources>