<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.enjoyfoof.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_daily_mealy"
        android:name="com.example.enjoyfoof.ui.gallery.GalleryFragment"
        android:label="@string/daily_mealy"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_favourite"
        android:name="com.example.enjoyfoof.ui.slideshow.SlideshowFragment"
        android:label="@string/favourite"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/myCartFragment"
        android:name="com.example.enjoyfoof.MyCartFragment"
        android:label="My Cart"
        tools:layout="@layout/fragment_my_cart" />
</navigation>