<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/detailed_image"
        android:layout_width="130dp"
        android:layout_height="110dp"
        android:layout_margin="10dp"
        android:src="@drawable/cofee"
        android:scaleType="centerCrop"
        app:riv_corner_radius="24dp"/>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="4dp">

            <TextView
                android:text="@string/name"
                android:id="@+id/detailed_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:maxLines="1"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/detailed_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@color/black"
                android:singleLine="true"/>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp">

                <ImageView
                    android:src="@drawable/start"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginTop="2dp"/>
                
                <TextView
                    android:id="@+id/detailed_rading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/_5.0"
                    android:textStyle="bold"/>

                <ImageView
                    android:src="@drawable/time"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="2dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                   android:textColor="@color/black"
                    android:layout_marginStart="4dp"
                    android:text="@string/_08_00_17_30"
                    android:textStyle="bold"/>

            </LinearLayout>
            
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                
                <Button
                    android:layout_width="97dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_to_cart"
                    android:textAllCaps="false"


                
            </androidx.constraintlayout.widget.ConstraintLayout>
                

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>